Updated index (07-13-2025).html

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
     <form action="mailto: eunicejaycedevero03@gmail.com" method="post" enctype="text/plain" class="inputbox">
         
         
-        <h4 class="name"></h4>Name:</h4>
+        <h4 class="name">Name:</h4>
         <br>
         <input type="text" name="name" class="nametxtbox" placeholder="Enter your name">
         <br>
-        <h4 class="email"></h4>Email:</h4>
+        <h4 class="email">Email:</h4>
         <br>
         <input type="text" name="mail" class="emailtxtbox" placeholder="Enter your name email">
         <br>
-        <h4 class="messageme"></h4>Message:</h4>
+        <h4 class="messageme">Message:</h4>
         <br>
         <textarea type="text" name="message" class="messagetxtbox" placeholder="Enter your message..."></textarea>
         <br>
