--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@
 
     
     <br>
-    <img src="images/gameover.png" alt="GAME OVER" class="gameover">
+    <div class="gameover-container">
+      <img src="images/gameover.png" alt="GAME OVER" class="gameover">
+    </div>
+
 
     <br>
 
