--- a/index.html
+++ b/index.html
@@ -222,7 +222,16 @@
 </script>
 
     <br>
-    <img src="images/arr.png" alt="@All Rights Reserved" class="arr-img">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <footer class="footer">
+      <p>© 2025 Eunice Jayce De Vero. All rights reserved.</p>
+    </footer>
+
 </section>
 </body>
 </html>
