--- a/index.html
+++ b/index.html
@@ -168,9 +168,25 @@
 
     <br><br><br><br>
 
-    <h2 class="othersocials">OTHER SOCIALS</h2>
-    <h4 class="accs">Mobile No.: <br> Facebook: <br> Instagram: </h4>
-    <h4 class="deets">+63 950 267 7404 <br> Eunice Jayce De Vero <br> @eunjyc </h4>   
+<div class="other-socials-container">
+  <h2 class="othersocials">OTHER SOCIALS</h2>
+
+  <div class="socials-row">
+    <h4 class="accs">
+      Mobile No.: <br>
+      Facebook: <br>
+      Instagram:
+    </h4>
+
+    <h4 class="deets">
+      +63 950 267 7404 <br>
+      Eunice Jayce De Vero <br>
+      @eunjyc
+    </h4>
+  </div>
+</div>
+
+
 
     <br><br><br><br>
 
