--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <div class="other-socials-container">
   <h2 class="othersocials">OTHER SOCIALS</h2>
 
-  <div class="socials-row">
+  <div class="socials-col">
     <h4 class="accs">
       Mobile No.: <br>
       Facebook: <br>
